Añadido el ejercicio03 del boletin 6.2, debe terminarse

--- a/Visual Studio Projects/Unidad 6/Serrano Ruiz Mauro UD6.2/Ejercicio02/HojaDeEstilo02.css
+++ b/Visual Studio Projects/Unidad 6/Serrano Ruiz Mauro UD6.2/Ejercicio02/HojaDeEstilo02.css
@@ -42,16 +42,14 @@ form>label {
 }
 
 #seleccion{
-    width: 100%;
     display: flex;
-    flex-wrap: wrap;
+    width: 100%;
     justify-content: space-between;
 }
 
 #grupo{
-    width: 100%;
-    display: flex;
-    align-items: center; 
+    flex: 0 0 30%;
+    margin: 5px;
 }
 
 button{
