--- a/Visual Studio Projects/Unidad 6/Serrano Ruiz Mauro UD6.2/Ejercicio03/HojaDeEstilo03.css
+++ b/Visual Studio Projects/Unidad 6/Serrano Ruiz Mauro UD6.2/Ejercicio03/HojaDeEstilo03.css
@@ -3,6 +3,7 @@ body {
     margin: 0 auto;
     padding: 20px;
     background-color: #f5f5f5;
+    color: black;
 }
 
 main {
@@ -27,29 +28,78 @@ form {
     width: 100%;
     display: flex;
     background-color: #f9f9f9;
+    color: gray;
+    font-size: 10pt;
 }
 
 fieldset {
     border: none;
     margin: 0;
-    flex: 0 1 50%;
 }
 
 .titulo {
     font-weight: bold;
     margin-bottom: 15px;
     font-size: 13pt;
+    color: black;
 }
 
 .requerido {
     color: red;
 }
 
-input, select {
-    padding: 5px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-bottom: 0px;
+
+input.dif, select.dif {
+    width: 50%;
 }
 
+form {
+    display: flex;
+    flex-direction: column; 
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
+}
+
+div>fieldset {
+    box-sizing: border-box;
+    flex: 0 0 50%;
+}
+
+input,select {
+    width: 100%;
+    height: 40px;
+    margin-top: 10px;
+}
+
+div.content {
+    display: flex;
+    flex-direction: column;
+}
+
+div.content > div.row > div.col {
+    display: flex;
+    flex-direction: column;
+    flex: 0 0 50%;
+}
+
+div.content > div.row > div.col input,
+div.content > div.row > div.col select {
+    width: 90%;
+}
+
+fieldset#lastField {
+    border-top: 2px solid black;
+    text-align: right;
+}
+
+fieldset#lastField>input {
+    width: fit-content;
+    height: 40px;
+    border: 1px solid gray;
+    background-color: antiquewhite;
+    font-weight: bold;
+    font-size: 15px;
+}
