Corregido el tipo examen y añadido el ejercicio 4

--- a/Visual Studio Projects/Unidad 6/Serrano Ruiz Mauro UD6.2/Ejercicio03/HojaDeEstilo03.css
+++ b/Visual Studio Projects/Unidad 6/Serrano Ruiz Mauro UD6.2/Ejercicio03/HojaDeEstilo03.css
@@ -103,3 +103,11 @@ fieldset#lastField>input {
     font-weight: bold;
     font-size: 15px;
 }
+
+fieldset:hover{
+    background-color: #FF9;
+}
+
+input:focus{
+    border: 2px solid #E6B700;
+}
