--- a/Visual Studio Projects/Unidad 7/SerranoRuizMauro/HojaDeEstilo.css
+++ b/Visual Studio Projects/Unidad 7/SerranoRuizMauro/HojaDeEstilo.css
@@ -63,26 +63,18 @@ footer a:hover .social {
     transform: scale(1.2);
 }
 
-.article-img {
-    width: 100%;
-    height: 250px;
-}
-
 .position-sticky {
     top: 10px;
 }
 
-.publicidad>img, .publicidad>video {
-    width: 100%;
-    margin-bottom: 20px;
+.rojo{
+    background: rgb(154, 1, 1);
 }
 
-.article-img {
-    width: 100%;
-    height: 250px;
+.card {
+    transition: transform 0.3s;
+    height: 100%;
 }
-
-.publicidad>img, .publicidad>video {
-    width: 100%;
-    margin-bottom: 20px;
+.card:hover {
+    transform: translateY(-5px);
 }
