--- a/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/Fragments.html
+++ b/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/Fragments.html
@@ -44,7 +44,7 @@
 					<ul class="navbar-nav">
 
 						<li class="nav-item">
-							<a class="nav-link px-3" href="#">Marcas</a>
+							<a class="nav-link px-3" href="/brands">Marcas</a>
 						</li>
 
 						<li class="nav-item dropdown">
@@ -53,7 +53,7 @@
 							<div class="dropdown-menu dropdown-menu-light p-3 mt-1 border-white"
 								aria-labelledby="dropdownSkateboards" style="min-width: 500px;">
 								<div class="row">
-								<!--Preguntar como hago pra el submenu con los filtros de las categorias-->
+								<!--Preguntar como hago para el submenu con los filtros de las categorias-->
 									<div class="col-6">
 										<h6 class="dropdown-header">Componentes</h6>
 										<a class="dropdown-item" href="/shop/1">Tablas</a>
@@ -73,20 +73,12 @@
 								</div>
 							</div>
 						</li>
-
-						<li class="nav-item">
-							<a class="nav-link px-3" href="#">% SALE</a>
-						</li>
-
+						
 					</ul>
 				</div>
 			</div>
 			<div class="container-fluid d-flex justify-content-end">
-				<form class="d-flex">
-					<input class="form-control me-2" type="search" placeholder="Buscar">
-					<button class="btn btn-outline-light" type="submit"><i class="bi bi-search"></i></button>
-				</form>
-				<a class="nav-link m-2" href="/Carrito.html" title="Carrito de compras"><i class="bi bi-cart"></i></a>
+				<a class="nav-link m-2" href="#" title="Carrito de compras"><i class="bi bi-cart"></i></a>
 			</div>
 		</nav>
 	</header>
