--- a/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/Tienda.html
+++ b/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/Tienda.html
@@ -74,15 +74,26 @@
 		<section class="container my-5">
 			<div class="d-flex justify-content-between align-items-center mb-4">
 				<h1 class="fw-bold" th:text="${resultCount} + ' RESULTADOS'"></h1>
-				<div>
-					<select class="form-select" aria-label="Filtrar productos">
-						<option selected>Filtrar</option>
-						<option value="1">Precio: Menor a mayor</option>
-						<option value="2">Precio: Mayor a menor</option>
-						<option value="3">Nombre: A-Z</option>
-						<option value="4">Nombre: Z-A</option>
-						<!--<option value="5">Más recientes</option>-->
-					</select>
+				<div class="row mb-4">
+					<div class="col-8">
+						<form class="form-section d-flex" th:action="@{/shop/search}" method="get">
+							<input class="form-control me-2" type="search" name="search" placeholder="Buscar">
+							<button class="btn btn-outline" type="submit"><i class="bi bi-search"></i></button>
+						</form>
+					</div>
+					<div class="col-4">
+						<form action="#" class="d-flex align-items-center w-100" method="get">
+							<select class="form-select col-3" name="sort" onchange="this.form.submit()"
+								aria-label="Ordenar productos">
+								<option value="" th:selected="${sort == null}">Ordenar</option>
+								<option value="0" th:selected="${sort == 0}">Precio: Menor a mayor</option>
+								<option value="1" th:selected="${sort == 1}">Precio: Mayor a menor</option>
+								<option value="2" th:selected="${sort == 2}">Nombre: A-Z</option>
+								<option value="3" th:selected="${sort == 3}">Nombre: Z-A</option>
+								<option value="4" th:selected="${sort == 4}">Más recientes</option>
+							</select>
+						</form>
+					</div>
 				</div>
 			</div>
 			<div class="row" th:if="${products}">
@@ -92,7 +103,8 @@
 						<div class="card-body d-flex flex-column">
 							<h5 class="card-title" th:text="${product.name}">Nombre del producto</h5>
 							<p class="card-text" th:text="${product.description}">Descripción del producto</p>
-							<div class="mt-auto d-flex justify-content-between">
+							<h5 class="card-text" th:text="${product.price} + ' €'">Precio del producto</h5>
+							<div class="mt-3 d-flex justify-content-between">
 								<a th:href="@{'/modifyProduct/' + ${product.id}}" class="btn btn-outline-dark btn-sm">
 									<i class="bi bi-pencil"></i> Modificar
 								</a>
