Finalizada la tienda y marcas, tengo que pensar logica negocio

--- a/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/FormularioProducto.html
+++ b/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/FormularioProducto.html
@@ -115,7 +115,7 @@
 						</div>
 
 						<div class="d-flex justify-content-end gap-3">
-							<a th:if="${product.id != null}" th:href="@{'/delete/' + ${product.id}}"
+							<a th:if="${product.id != null}" th:href="@{'/deleteProduct/' + ${product.id}}"
 								class="btn btn-outline-danger">
 								<i class="bi bi-trash"></i> Eliminar Producto
 							</a>
