--- a/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/Fragments.html
+++ b/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/Fragments.html
@@ -53,27 +53,21 @@
 							<div class="dropdown-menu dropdown-menu-light p-3 mt-1 border-white"
 								aria-labelledby="dropdownSkateboards" style="min-width: 500px;">
 								<div class="row">
-								<!--Preguntar como hago para el submenu con los filtros de las categorias-->
-									<div class="col-6">
-										<h6 class="dropdown-header">Componentes</h6>
-										<a class="dropdown-item" href="/shop/1">Tablas</a>
-										<a class="dropdown-item" href="/shop/2">Ejes</a>
-										<a class="dropdown-item" href="/shop/3">Ruedas</a>
-										<a class="dropdown-item" href="/shop/4">Rodamientos</a>
-										<a class="dropdown-item" href="/shop/5">Tornillos</a>
-										<a class="dropdown-item" href="/shop/6">Lijas</a>
-									</div>
-
-									<div class="col-6">
-										<h6 class="dropdown-header">Completos</h6>
-										<a class="dropdown-item" href="/shop/7">Skateboards completos</a>
-										<a class="dropdown-item" href="/shop/8">Cruiser</a>
-										<a class="dropdown-item" href="/shop/9">Longboards</a>
+									<div class="col-12">
+										<h6 class="dropdown-header">Categorias</h6>
+										<a th:each="category : ${categories}" class="dropdown-item"
+											th:href="@{/shop/{id}(id=${category.id})}" th:text="${category.categoryName}">
+											Nombre Categoría
+										</a>
 									</div>
 								</div>
 							</div>
 						</li>
-						
+
+						<li class="nav-item">
+							<a class="nav-link px-3" href="/categories">Categorias</a>
+						</li>
+
 					</ul>
 				</div>
 			</div>
