--- a/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/Tienda.html
+++ b/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/Tienda.html
@@ -8,24 +8,9 @@
 	<title>Tienda - Tabla Rota Skate Shop</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="../HojaDeEstilo.css">
+	<link rel="stylesheet" type="text/css" th:href="@{../static/css/HojaDeEstilo.css}">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-	<style>
-		.nav-link {
-			position: relative;
-			transition: all 0.3s ease;
-		}
-
-		.nav-link:hover {
-			font-weight: bold;
-			border-bottom: red 2px solid;
-		}
-
-		.dropdown:hover .dropdown-menu {
-			display: block;
-			margin-top: 0;
-		}
-	</style>
+	
 </head>
 
 <body>
@@ -53,9 +38,8 @@
 				</div>
 			</div>
 
-			<div class="d-flex flex-wrap justify-content-center mt-5 gap-4" th:if="${categories}">
-
-				<div class="text-center m-2" th:each="category : ${categories}">
+			<div class="row justify-content-center mt-5 g-2" th:if="${categories}">
+				<div class="col-auto col-md-3 col-lg-1 text-center" th:each="category : ${categories}">
 					<a th:if="${selectedCategoryId != category.id}" th:href="@{'/shop/' + ${category.id}}">
 						<button class="btn btn-outline-dark rounded-circle p-4 border-2">
 
@@ -100,7 +84,9 @@
 			<div class="row" th:if="${products}">
 				<div class="col-md-4 mb-5" th:each="product : ${products}">
 					<div class="card h-100 shadow-sm">
-						<img th:src="${product.image}" class="card-img-top" alt="Imagen del producto">
+						<img th:src="${#strings.isEmpty(product.image) ? 'https://www.shutterstock.com/image-vector/image-icon-trendy-flat-style-600nw-643080895.jpg' : product.image}"
+							th:alt="${#strings.isEmpty(product.altText) ? 'Imagen por defecto' : product.altText}"
+							class="card-img-top" />
 						<div class="card-body d-flex flex-column">
 							<h5 class="card-title" th:text="${product.name}">Nombre del producto</h5>
 							<p class="card-text" th:text="${product.description}">Descripción del producto</p>
