--- a/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/FormularioMarca.html
+++ b/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/FormularioMarca.html
@@ -7,30 +7,8 @@
 	<title>Modificar Marca - Tabla Rota Skate Shop</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+	<link rel="stylesheet" type="text/css" th:href="@{/css/HojaDeEstilo.css}">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-	<style>
-		.nav-link {
-			position: relative;
-			transition: all 0.3s ease;
-		}
-
-		.nav-link:hover {
-			font-weight: bold;
-			border-bottom: red 2px solid;
-		}
-
-		.dropdown:hover .dropdown-menu {
-			display: block;
-			margin-top: 0;
-		}
-
-		.form-section {
-			background-color: #f8f9fa;
-			border-radius: 10px;
-			padding: 2rem;
-			box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-		}
-	</style>
 </head>
 
 <body>
