--- a/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/FormularioProducto.html
+++ b/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/FormularioProducto.html
@@ -8,6 +8,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+	<link rel="stylesheet" type="text/css" th:href="@{/css/HojaDeEstilo.css}">
 	<style>
 		.nav-link {
 			position: relative;
