--- a/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/Marcas.html
+++ b/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/Marcas.html
@@ -8,7 +8,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-	<link rel="stylesheet" type="text/css" href="../HojaDeEstilo.css">
+	<link rel="stylesheet" type="text/css" th:href="@{/css/HojaDeEstilo.css}">
 </head>
 
 <body>
@@ -31,7 +31,7 @@
 		</div>
 
 		<div class="row" th:if="${brands}">
-			<div class="col-md-4 mb-4" th:each="brand : ${brands}">
+			<div class="col-lg-4 col-md-6 col-sm-12 mb-4" th:each="brand : ${brands}">
 				<div class="card h-100 shadow-sm">
 					<div class="card-body d-flex flex-column justify-content-between">
 						<div class="row">
