--- a/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/PreguntasFrecuentes.html
+++ b/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/PreguntasFrecuentes.html
@@ -7,7 +7,7 @@
 	<title>FAQ - Preguntas frecuentes</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="../HojaDeEstilo.css">
+	<link rel="stylesheet" type="text/css" th:href="@{/css/HojaDeEstilo.css}">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 	<style>
 		.nav-link {
