--- a/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/Tienda.html
+++ b/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/Tienda.html
@@ -8,7 +8,7 @@
 	<title>Tienda - Tabla Rota Skate Shop</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-	<link rel="stylesheet" type="text/css" th:href="@{../static/css/HojaDeEstilo.css}">
+	<link rel="stylesheet" type="text/css" th:href="@{/css/HojaDeEstilo.css}">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 	
 </head>
@@ -82,7 +82,7 @@
 				</div>
 			</div>
 			<div class="row" th:if="${products}">
-				<div class="col-md-4 mb-5" th:each="product : ${products}">
+				<div class="col-lg-4 col-md-6 col-sm-12 mb-5" th:each="product : ${products}">
 					<div class="card h-100 shadow-sm">
 						<img th:src="${#strings.isEmpty(product.image) ? 'https://www.shutterstock.com/image-vector/image-icon-trendy-flat-style-600nw-643080895.jpg' : product.image}"
 							th:alt="${#strings.isEmpty(product.altText) ? 'Imagen por defecto' : product.altText}"
