--- a/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/FormularioProducto.html
+++ b/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/FormularioProducto.html
@@ -66,8 +66,14 @@
 
 								<div class="mb-3">
 									<label for="productPrice" class="form-label fw-bold">Precio (€)</label>
-									<input type="number" th:field="*{price}" step="0.01" class="form-control"
+									<input type="number" th:field="*{price}" step="0.01" min="0" class="form-control"
 										id="productPrice" value="0" required>
+								</div>
+
+								<div class="mb-3">
+									<label for="productDiscount" class="form-label fw-bold">Descuento (%)</label>
+									<input type="number" th:field="*{discount}" step="0.01" min="0" max="100" class="form-control"
+										id="productDiscount" value="0" required>
 								</div>
 
 								<div class="mb-3">
