--- a/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/Marcas.html
+++ b/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/Marcas.html
@@ -30,6 +30,12 @@
 			</div>
 		</div>
 
+		<div class="text-center m-4">
+			<a href="/createBrand" class="btn btn-dark btn-lg">
+				<i class="bi bi-plus-lg"></i> Añadir nueva marca
+			</a>
+		</div>
+
 		<div class="row" th:if="${brands}">
 			<div class="col-lg-4 col-md-6 col-sm-12 mb-4" th:each="brand : ${brands}">
 				<div class="card h-100 shadow-sm">
@@ -39,12 +45,13 @@
 								<div>
 									<h5 class="card-title fw-bold" th:text="${brand.brandName}">Nombre de la Marca</h5>
 									<p class="card-text text-muted" th:text="'ID: ' + ${brand.id}"></p>
+									<p class="card-text text-danger" th:if="${brand.discount > 0}" th:text="'-' + ${brand.discount} + '%'">Promoción</p>
 								</div>
 							</div>
 							<div class="col-7 d-flex align-items-center">
 								<img th:src="${#strings.isEmpty(brand.logo) ? 'https://www.shutterstock.com/image-vector/image-icon-trendy-flat-style-600nw-643080895.jpg' : brand.logo}"
 									th:alt="${#strings.isEmpty(brand.altText) ? 'Logo por defecto' : brand.altText}"
-									class="card-img"/>
+									class="card-img" />
 							</div>
 						</div>
 						<div class="d-flex justify-content-between mt-3">
@@ -58,11 +65,6 @@
 					</div>
 				</div>
 			</div>
-		</div>
-		<div class="text-center mt-4">
-			<a href="/createBrand" class="btn btn-dark">
-				<i class="bi bi-plus-lg"></i> Añadir nueva marca
-			</a>
 		</div>
 
 	</main>
