--- a/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/Tienda.html
+++ b/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/Tienda.html
@@ -19,7 +19,7 @@
 	</header>
 
 	<main>
-		<section class="container my-5">
+		<section class="container my-4">
 			<div class="row align-items-center">
 				<div class="col-md-6">
 					<div class="mb-4">
@@ -56,7 +56,7 @@
 			</div>
 		</section>
 
-		<section class="container my-5">
+		<section class="container my-4">
 			<div class="d-flex justify-content-between align-items-center mb-4">
 				<h1 class="fw-bold" th:text="${resultCount} + ' RESULTADOS'"></h1>
 				<div class="row mb-4">
@@ -81,6 +81,20 @@
 					</div>
 				</div>
 			</div>
+
+			<div class="row m-4 text-center">
+				<div class="col-6">
+					<a href="/create-product" class="btn btn-dark btn-lg">
+						<i class="bi bi-plus-lg"></i> Añadir nuevo producto
+					</a>
+				</div>
+				<div class="col-6">
+					<a href="/hidden-products" class="btn btn-dark btn-lg">
+						<i class="bi bi-eye"></i> Ver productos ocultos
+					</a>
+				</div>
+			</div>
+
 			<div class="row" th:if="${products}">
 				<div class="col-lg-4 col-md-6 col-sm-12 mb-5" th:each="product : ${products}">
 					<div class="card h-100 shadow-sm">
@@ -91,23 +105,26 @@
 							<h5 class="card-title" th:text="${product.name}">Nombre del producto</h5>
 							<p class="card-text" th:text="${product.description}">Descripción del producto</p>
 							<div>
-								<h5 class="card-text" th:if="${product.discount == null or product.discount == 0}"
+								<h5 class="card-text"
+									th:if="${product.getFinalDiscount == null or product.getFinalDiscount == 0}"
 									th:text="${#numbers.formatDecimal(product.price, 1, 2) + '€'}">
 									Precio del producto
 								</h5>
 
-								<h5 class="card-text" th:if="${product.discount != null and product.discount > 0}">
+								<h5 class="card-text"
+									th:if="${product.getFinalDiscount != null and product.getFinalDiscount > 0}">
 
 									<span class="text-danger"
-										th:text="${#numbers.formatDecimal(product.price - (product.price * product.discount / 100), 1, 2) + '€'}">
+										th:text="${#numbers.formatDecimal(product.getDiscountedPrice, 1, 2) + '€'}">
 									</span>
 
 									<span class="text-decoration-line-through ms-2"
 										th:text="${#numbers.formatDecimal(product.price, 1, 2) + ' €'}">
 									</span>
-									
-									<span class="text-danger" th:text="${'-' + #numbers.formatDecimal(product.discount, 1, 0) + '%'}">
-										
+
+									<span class="text-danger"
+										th:text="${'-' + #numbers.formatDecimal(product.getFinalDiscount, 1, 0) + '%'}">
+
 									</span>
 								</h5>
 							</div>
@@ -125,11 +142,6 @@
 				</div>
 			</div>
 
-			<div class="text-center mt-5">
-				<a href="/createProduct" class="btn btn-dark btn-lg">
-					<i class="bi bi-plus-lg"></i> Añadir nuevo producto
-				</a>
-			</div>
 		</section>
 	</main>
 
