--- a/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/Tienda.html
+++ b/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/Tienda.html
@@ -89,7 +89,7 @@
 					</a>
 				</div>
 				<div class="col-6">
-					<a href="/hidden-products" class="btn btn-dark btn-lg">
+					<a href="/shop/hidden-products" class="btn btn-dark btn-lg">
 						<i class="bi bi-eye"></i> Ver productos ocultos
 					</a>
 				</div>
