--- a/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/Fragments.html
+++ b/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/Fragments.html
@@ -6,7 +6,6 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 	<link rel="stylesheet" type="text/css" th:href="@{/css/HojaDeEstilo.css}">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
 </head>
 
 <body>
@@ -15,7 +14,7 @@
 			<div class="container-fluid">
 
 				<a class="navbar-brand me-4" href="/">
-					<img th:src="@{../images/LogoTablaRota.png}" alt="Tabla Rota" width="100" height="100"
+					<img th:src="@{/images/LogoTablaRota.png}" alt="Tabla Rota" width="100" height="100"
 						class="d-inline-block align-text-top">
 				</a>
 
@@ -31,7 +30,7 @@
 						<li class="nav-item">
 							<a class="nav-link px-3" href="/brands">Marcas</a>
 						</li>
-						
+
 						<li class="nav-item">
 							<a class="nav-link px-3" href="/categories">Categorias</a>
 						</li>
@@ -39,7 +38,7 @@
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle px-3" href="/shop" id="dropdownSkateboards"
 								role="button">Skateboards</a>
-							<div class="dropdown-menu dropdown-menu-light p-3 mt-1 border-white"
+							<div class="dropdown-menu dropdown-menu-light p-3 border-white"
 								aria-labelledby="dropdownSkateboards">
 								<div class="row">
 									<div class="col-12">
@@ -55,7 +54,7 @@
 						</li>
 
 						<li class="nav-item">
-							<a class="nav-link px-3" href="/sale-products">% Sale</a>
+							<a class="nav-link px-3" href="/shop/sale-products">% Sale</a>
 						</li>
 
 					</ul>
@@ -69,8 +68,8 @@
 		<div class="container py-3 justify-content-center d-flex">
 			<div class="row text-center">
 				<div class="col-6 col-md-auto mb-2">
-					<a href="/shipping-return" class="text-decoration-none text-dark"><i
-							class="bi bi-truck fs-5"></i> <span class="ms-1 fw-semibold">Envío</span></a>
+					<a href="/shipping-return" class="text-decoration-none text-dark"><i class="bi bi-truck fs-5"></i>
+						<span class="ms-1 fw-semibold">Envío</span></a>
 				</div>
 				<div class="col-6 col-md-auto mb-2 border-start border-dark-subtle ps-3">
 					<a href="/shipping-return" class="text-decoration-none text-dark"><i
@@ -83,16 +82,17 @@
 							class="ms-1 fw-semibold">Intercambio</span></a>
 				</div>
 				<div class="col-6 col-md-auto mb-2 border-start border-dark-subtle ps-3">
-					<a href="/faq" class="text-decoration-none text-dark"><i
-							class="bi bi-question-circle fs-5"></i> <span class="ms-1 fw-semibold">FAQ - Preguntas
+					<a href="/faq" class="text-decoration-none text-dark"><i class="bi bi-question-circle fs-5"></i>
+						<span class="ms-1 fw-semibold">FAQ - Preguntas
 							frecuentes</span></a>
 				</div>
 				<div class="col-6 col-md-auto mb-2 border-start border-dark-subtle ps-3">
-					<a href="/customer-service" class="text-decoration-none text-dark"><i class="bi bi-headset fs-5"></i>
+					<a href="/customer-service" class="text-decoration-none text-dark"><i
+							class="bi bi-headset fs-5"></i>
 						<span class="ms-1 fw-semibold">Atención al cliente</span></a>
 				</div>
 				<div class="col-6 col-md-auto mb-2 border-start border-dark-subtle ps-3">
-					<a href="#sociale" class="text-decoration-none text-dark"><i class="bi bi-globe"></i>
+					<a href="#social" class="text-decoration-none text-dark"><i class="bi bi-globe fs-5"></i>
 						<span class="ms-1 fw-semibold">Redes</span></a>
 				</div>
 			</div>
