--- a/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/brand/FormularioMarca.html
+++ b/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/brand/FormularioMarca.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Formulario para crear o modificar una marca en Tabla Rota Skate Shop">
 	<title>Modificar Marca - Tabla Rota Skate Shop</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -12,7 +13,7 @@
 </head>
 
 <body>
-	<header th:replace="Fragments :: header"></header>
+	<header th:replace = "~{Fragments :: header}"></header>
 
 	<main class="container my-5">
 		<div class="row justify-content-center">
@@ -24,18 +25,36 @@
 					</a>
 				</div>
 
-				<form class="form-section mb-5" th:action="@{/saveBrand}" th:object="${brand}" method="post">
+				<form class="form-section mb-5" th:action="@{/save-brand}" th:object="${brand}" method="post">
 					<input type="hidden" th:field="*{id}" />
 
-					<div class="mb-3">
-						<label for="brandName" class="form-label fw-bold">Nombre de la Marca</label>
-						<input type="text" th:field="*{brandName}" class="form-control" id="brandName" required>
+					<div th:if="${brand.id != null}" class="row">
+						<div class="mb-3 col-3">
+							<label for="brandId" class="form-label fw-bold">Id</label>
+							<input type="number" th:field="*{id}" class="form-control" id="brandId" th:value="*{id}"
+								readonly>
+						</div>
+						<div class="mb-3 col-9">
+							<label for="categoryName" class="form-label fw-bold">Nombre de la Categoría</label>
+							<input type="text" th:field="*{brandName}" class="form-control" id="brandName"
+								required>
+						</div>
 					</div>
 
-					<div class="mb-3">
-						<label for="brandDiscount" class="form-label fw-bold">Descuento por Marca (%)</label>
-						<input type="number" th:field="*{discount}" step="0.01" min="0" max="100" class="form-control"
-							id="brandDiscount" value="" required>
+					<div th:if="${brand.id == null}" class="mb-3">
+						<label for="brandName" class="form-label fw-bold">Nombre de la Categoría</label>
+						<input type="text" th:field="*{brandName}" class="form-control" id="brandName" required>
+					</div>
+					
+					<div class="row">
+						<div class="mb-3 col-3">
+							<label for="brandDiscount" class="form-label fw-bold">Promoción (%)</label>
+							<input type="number" th:field="*{discount}" step="0.01" min="0" max="100"
+								class="form-control" id="brandDiscount" value="" required>
+						</div>
+						<div class="col-9">
+
+						</div>
 					</div>
 
 					<div class="mb-3">
@@ -49,7 +68,7 @@
 					</div>
 
 					<div class="d-flex justify-content-end gap-3">
-						<a th:if="${brand.id != null}" th:href="@{'/deleteBrand/' + ${brand.id}}"
+						<a th:if="${brand.id != null}" th:href="@{'/delete-brand/' + ${brand.id}}"
 							class="btn btn-outline-danger">
 							<i class="bi bi-trash"></i> Eliminar Marca
 						</a>
@@ -62,7 +81,7 @@
 		</div>
 	</main>
 
-	<footer class="mt-5 border-top" th:replace="Fragments :: footer"></footer>
+	<footer class="mt-5 border-top" th:replace="~{Fragments :: footer}"></footer>
 </body>
 
 </html>
