--- a/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/category/Categorias.html
+++ b/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/category/Categorias.html
@@ -4,7 +4,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Marcas - Tabla Rota Skate Shop</title>
+	<meta name="description" content="Gestión de categorías de productos en Tabla Rota Skate Shop">
+	<title>Categorias - Tabla Rota Skate Shop</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -12,7 +13,7 @@
 </head>
 
 <body>
-	<header th:replace="Fragments :: header"></header>
+	<header th:replace = "~{Fragments :: header}"></header>
 
 	<main class="container my-5">
 		<div class="align-items-center mb-4">
@@ -20,14 +21,14 @@
 		</div>
 
 		<div class="text-center m-4">
-			<a href="/createCategory" class="btn btn-dark btn-lg">
+			<a href="/create-category" class="btn btn-dark btn-lg">
 				<i class="bi bi-plus-lg"></i> Añadir nueva categoría
 			</a>
 		</div>
 
 		<div class="row" th:if="${categories}">
 			<div class="col-lg-3 col-md-4 col-sm-6 mb-4" th:each="category : ${categories}">
-				<div class="card h-100 shadow-sm">
+				<div class="card h-100 shadow">
 					<div class="card-body d-flex flex-column justify-content-between">
 						<div class="row">
 							<div class="d-flex align-items-center">
@@ -39,10 +40,10 @@
 							</div>
 						</div>
 						<div class="d-flex justify-content-between mt-3">
-							<a th:href="@{'/modifyCategory/' + ${category.id}}" class="btn btn-outline-dark btn-sm">
+							<a th:href="@{'/modify-category/' + ${category.id}}" class="btn btn-outline-dark btn-sm">
 								<i class="bi bi-pencil"></i> Modificar
 							</a>
-							<a th:href="@{'/deleteCategory/' + ${category.id}}" class="btn btn-outline-danger btn-sm">
+							<a th:href="@{'/delete-category/' + ${category.id}}" class="btn btn-outline-danger btn-sm">
 								<i class="bi bi-trash"></i> Eliminar
 							</a>
 						</div>
@@ -53,7 +54,7 @@
 
 	</main>
 
-	<footer class="mt-5 border-top" th:replace="Fragments :: footer"></footer>
+	<footer class="mt-5 border-top" th:replace="~{Fragments :: footer}"></footer>
 </body>
 
 </html>
