--- a/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/product/FormularioProducto.html
+++ b/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/product/FormularioProducto.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Formulario para crear o modificar producto en Tabla Rota Skate Shop">
 	<title>Modificar Producto - Tabla Rota Skate Shop</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -12,9 +13,7 @@
 </head>
 
 <body>
-	<header th:replace="Fragments :: header">
-
-	</header>
+	<header th:replace = "~{Fragments :: header}"></header>
 
 	<main class="container my-5">
 		<div class="row justify-content-center">
@@ -35,46 +34,63 @@
 								<input type="hidden" th:field="*{creationDate}" class="form-control"
 									id="productCreationDate">
 
-								<div class="mb-3">
-									<label for="productName" class="form-label fw-bold">Nombre del Producto</label>
+								<div th:if="${product.id != null}" class="row">
+									<div class="mb-3 col-3">
+										<label for="productId" class="form-label fw-bold">Id</label>
+										<input type="number" th:field="*{id}" class="form-control" id="productId"
+											th:value="*{id}" readonly>
+									</div>
+									<div class="mb-3 col-9">
+										<label for="productName" class="form-label fw-bold">Nombre del producto</label>
+										<input type="text" th:field="*{name}" class="form-control" id="productName"
+											required>
+									</div>
+								</div>
+
+								<div th:if="${product.id == null}" class="mb-3">
+									<label for="productName" class="form-label fw-bold">Nombre de la producto</label>
 									<input type="text" th:field="*{name}" class="form-control" id="productName"
 										required>
 								</div>
 
-								<div class="mb-3">
-									<label for="productPrice" class="form-label fw-bold">Precio (€)</label>
-									<input type="number" th:field="*{price}" step="0.01" min="0" class="form-control"
-										id="productPrice" value="0" required>
+								<div class="row">
+									<div class="mb-3 col-4">
+										<label for="productPrice" class="form-label fw-bold">Precio (€)</label>
+										<input type="number" th:field="*{price}" step="0.01" min="0"
+											class="form-control" id="productPrice" value="0" required>
+									</div>
+
+									<div class="mb-3 col-4">
+										<label for="productDiscount" class="form-label fw-bold">Descuento (%)</label>
+										<input type="number" th:field="*{discount}" step="0.01" min="0" max="100"
+											class="form-control" id="productDiscount" value="0" required>
+									</div>
+
+									<div class="mb-3 col-4">
+										<label for="productStock" class="form-label fw-bold">Stock disponible</label>
+										<input type="number" th:field="*{stock}" class="form-control" id="productStock"
+											value="0" required>
+									</div>
 								</div>
 
-								<div class="mb-3">
-									<label for="productDiscount" class="form-label fw-bold">Descuento (%)</label>
-									<input type="number" th:field="*{discount}" step="0.01" min="0" max="100" class="form-control"
-										id="productDiscount" value="0" required>
-								</div>
+								<div class="row">
+									<div class="mb-3 col-6">
+										<label for="productCategory" class="form-label fw-bold">Categoría</label>
+										<select th:field="*{category}" class="form-select form-control"
+											id="productCategory" required>
+											<option th:each="category : ${categories}" th:value="${category.id}"
+												th:text="${category.categoryName}"></option>
+										</select>
+									</div>
 
-								<div class="mb-3">
-									<label for="productCategory" class="form-label fw-bold">Categoría</label>
-									<select th:field="*{category}" class="form-select form-control" id="productCategory"
-										required>
-										<option th:each="category : ${categories}" th:value="${category.id}"
-											th:text="${category.categoryName}"></option>
-									</select>
-								</div>
-
-								<div class="mb-3">
-									<label for="productBrand" class="form-label fw-bold">Marca</label>
-									<select th:field="*{brand}" class="form-select form-control" id="productBrand"
-										required>
-										<option th:each="brand : ${brands}" th:value="${brand.id}"
-											th:text="${brand.brandName}"></option>
-									</select>
-								</div>
-
-								<div class="mb-3">
-									<label for="productStock" class="form-label fw-bold">Stock disponible</label>
-									<input type="number" th:field="*{stock}" class="form-control" id="productStock"
-										value="0" required>
+									<div class="mb-3 col-6">
+										<label for="productBrand" class="form-label fw-bold">Marca</label>
+										<select th:field="*{brand}" class="form-select form-control" id="productBrand"
+											required>
+											<option th:each="brand : ${brands}" th:value="${brand.id}"
+												th:text="${brand.brandName}"></option>
+										</select>
+									</div>
 								</div>
 
 								<div class="mb-3">
@@ -103,7 +119,7 @@
 						</div>
 
 						<div class="d-flex justify-content-end gap-3">
-							<a th:if="${product.id != null}" th:href="@{'/deleteProduct/' + ${product.id}}"
+							<a th:if="${product.id != null}" th:href="@{'/delete-product/' + ${product.id}}"
 								class="btn btn-outline-danger">
 								<i class="bi bi-trash"></i> Eliminar Producto
 							</a>
@@ -117,7 +133,7 @@
 		</div>
 	</main>
 
-	<footer class="mt-5 border-top" th:replace="Fragments :: footer">
+	<footer class="mt-5 border-top" th:replace="~{Fragments :: footer}"></footer>
 
 	</footer>
 </body>
