--- a/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/product/Tienda.html
+++ b/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/product/Tienda.html
@@ -2,9 +2,9 @@
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<!--meter el name y description con meta-->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Tienda de Tabla Rota Skate Shop">
 	<title>Tienda - Tabla Rota Skate Shop</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -14,30 +14,31 @@
 </head>
 
 <body>
-	<header th:replace="Fragments :: header">
-
-	</header>
+	<header th:replace = "~{Fragments :: header}"></header>
 
 	<main>
 		<section class="container my-4">
-			<div class="row align-items-center text-center">
-				<div class="col-3">
-					
+			<div class="row align-items-center">
+				<div class="col-md-6">
+					<div class="mb-4">
+						<h2 class="fw-bold border-bottom pb-2">TABLA ROTA - SKATESHOP</h2>
+						<p class="text-muted">EL MEJOR MATERIAL</p>
+						<p>¿Estás buscando un nuevo skate o necesitas una nueva tabla o ruedas? En Tabla Rota Skate Shop
+							encontrarás todo lo que necesitas para patinar. Tanto si eres principiante como pro, tenemos
+							las mejores marcas y mucha información para
+							ayudarte en el camino.</p>
+					</div>
 				</div>
-				<div class="col-6 mb-4">
-					<h2 class="fw-bold border-bottom pb-2">SECCIÓN DE PRODUCTOS OCULTOS</h2>
-					<p>Aquí se muestran los productos que se encuentran actualmente ocultos en la tienda debido a
-						que no tienen atibuido una categoria o marca, aparte de estar marcados como no visibles.</p>
-				</div>
-				<div class="col-3">
-					
+
+				<div class="col-md-6">
+					<img src="https://images.pexels.com/photos/5880093/pexels-photo-5880093.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+						class="img-fluid rounded" alt="Tienda de skate">
 				</div>
 			</div>
 
 			<div class="row justify-content-center mt-5 g-2" th:if="${categories}">
 				<div class="col-auto col-md-3 col-lg-1 text-center" th:each="category : ${categories}">
-					<a th:if="${selectedCategoryId != category.id}"
-						th:href="@{'/shop/hidden-products/' + ${category.id}}">
+					<a th:if="${selectedCategoryId != category.id}" th:href="@{'/shop/' + ${category.id}}">
 						<button class="btn btn-outline-dark rounded-circle p-4 border-2">
 
 						</button>
@@ -58,7 +59,7 @@
 				<h1 class="fw-bold" th:text="${resultCount} + ' RESULTADOS'"></h1>
 				<div class="row mb-4">
 					<div class="col-8">
-						<form class="form-section d-flex" th:action="@{/shop/hidden-products/search}" method="get">
+						<form class="form-section d-flex" th:action="@{/shop/search}" method="get">
 							<input class="form-control me-2" type="search" name="search" placeholder="Buscar">
 							<button class="btn btn-outline" type="submit"><i class="bi bi-search"></i></button>
 						</form>
@@ -86,15 +87,15 @@
 					</a>
 				</div>
 				<div class="col-6">
-					<a href="/shop" class="btn btn-dark btn-lg">
-						<i class="bi bi-arrow-left"></i> Volver a la tienda
+					<a href="/shop/hidden-products" class="btn btn-dark btn-lg">
+						<i class="bi bi-eye"></i> Ver productos ocultos
 					</a>
 				</div>
 			</div>
 
-			<div class="row" th:if="${products}">
+			<div class="row mt-5" th:if="${products}">
 				<div class="col-lg-4 col-md-6 col-sm-12 mb-5" th:each="product : ${products}">
-					<div class="card h-100 shadow-sm">
+					<div class="card h-100 shadow">
 						<img th:src="${#strings.isEmpty(product.image) ? 'https://www.shutterstock.com/image-vector/image-icon-trendy-flat-style-600nw-643080895.jpg' : product.image}"
 							th:alt="${#strings.isEmpty(product.altText) ? 'Imagen por defecto' : product.altText}"
 							class="card-img-top" />
@@ -121,16 +122,20 @@
 
 									<span class="text-danger"
 										th:text="${'-' + #numbers.formatDecimal(product.getFinalDiscount, 1, 0) + '%'}">
-
 									</span>
 								</h5>
 							</div>
+							
+							<div class="d-flex justify-content-end">
+								<a th:href="@{'/shop/product/' + ${product.id}}" class="btn btn-sm btn-outline-dark">
+									<i class="bi bi-arrow-bar-left p-1"></i>Ver más</a>
+							</div>
 
 							<div class="mt-3 d-flex justify-content-between">
-								<a th:href="@{'/modifyProduct/' + ${product.id}}" class="btn btn-outline-dark btn-sm">
+								<a th:href="@{'/modify-product/' + ${product.id}}" class="btn btn-outline-dark btn-sm">
 									<i class="bi bi-pencil"></i> Modificar
 								</a>
-								<a th:href="@{'/deleteProduct/' + ${product.id}}" class="btn btn-outline-danger btn-sm">
+								<a th:href="@{'/delete-product/' + ${product.id}}" class="btn btn-outline-danger btn-sm">
 									<i class="bi bi-x"></i> Eliminar
 								</a>
 							</div>
@@ -142,9 +147,7 @@
 		</section>
 	</main>
 
-	<footer class="mt-5 border-top" th:replace="Fragments :: footer">
-
-	</footer>
+	<footer class="mt-5 border-top" th:replace="~{Fragments :: footer}"></footer>
 
 </body>
 
