--- a/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/product/TiendaSale.html
+++ b/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/product/TiendaSale.html
@@ -5,7 +5,8 @@
 	<!--meter el name y description con meta-->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Tienda - Tabla Rota Skate Shop</title>
+	<meta name="description" content="Página de promociones en la tienda de Tabla Rota Skate Shop">
+	<title>Tienda en Promoción - Tabla Rota Skate Shop</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 	<link rel="stylesheet" type="text/css" th:href="@{/css/HojaDeEstilo.css}">
@@ -14,9 +15,7 @@
 </head>
 
 <body>
-	<header th:replace="Fragments :: header">
-
-	</header>
+	<header th:replace = "~{Fragments :: header}"></header>
 
 	<main>
 		<section class="container my-4">
@@ -40,12 +39,13 @@
 
 			<div class="row justify-content-center mt-5 g-2" th:if="${categories}">
 				<div class="col-auto col-md-3 col-lg-1 text-center" th:each="category : ${categories}">
-					<a th:if="${selectedCategoryId != category.id}" th:href="@{'/sale-products/' + ${category.id}}">
+					<a th:if="${selectedCategoryId != category.id}"
+						th:href="@{'/shop/sale-products/' + ${category.id}}">
 						<button class="btn btn-outline-dark rounded-circle p-4 border-2">
 
 						</button>
 					</a>
-					<a th:if="${selectedCategoryId == category.id}" th:href="@{'/shop'}">
+					<a th:if="${selectedCategoryId == category.id}" th:href="@{'/shop/sale-products'}">
 						<button class="btn btn-dark rounded-circle p-4 border-2">
 
 						</button>
@@ -61,7 +61,7 @@
 				<h1 class="fw-bold" th:text="${resultCount} + ' RESULTADOS'"></h1>
 				<div class="row mb-4">
 					<div class="col-8">
-						<form class="form-section d-flex" th:action="@{/sale-products/search}" method="get">
+						<form class="form-section d-flex" th:action="@{/shop/sale-products/search}" method="get">
 							<input class="form-control me-2" type="search" name="search" placeholder="Buscar">
 							<button class="btn btn-outline" type="submit"><i class="bi bi-search"></i></button>
 						</form>
@@ -95,9 +95,9 @@
 				</div>
 			</div>
 
-			<div class="row" th:if="${products}">
+			<div class="row mt-5" th:if="${products}">
 				<div class="col-lg-4 col-md-6 col-sm-12 mb-5" th:each="product : ${products}">
-					<div class="card h-100 shadow-sm">
+					<div class="card h-100 shadow">
 						<img th:src="${#strings.isEmpty(product.image) ? 'https://www.shutterstock.com/image-vector/image-icon-trendy-flat-style-600nw-643080895.jpg' : product.image}"
 							th:alt="${#strings.isEmpty(product.altText) ? 'Imagen por defecto' : product.altText}"
 							class="card-img-top" />
@@ -129,11 +129,17 @@
 								</h5>
 							</div>
 
+							<div class="d-flex justify-content-end">
+								<a th:href="@{'/shop/sale-products/product/' + ${product.id}}" class="btn btn-sm btn-outline-dark">
+									<i class="bi bi-arrow-bar-left p-1"></i>Ver más</a>
+							</div>
+
 							<div class="mt-3 d-flex justify-content-between">
-								<a th:href="@{'/modifyProduct/' + ${product.id}}" class="btn btn-outline-dark btn-sm">
+								<a th:href="@{'/modify-product/' + ${product.id}}" class="btn btn-outline-dark btn-sm">
 									<i class="bi bi-pencil"></i> Modificar
 								</a>
-								<a th:href="@{'/deleteProduct/' + ${product.id}}" class="btn btn-outline-danger btn-sm">
+								<a th:href="@{'/delete-product/' + ${product.id}}"
+									class="btn btn-outline-danger btn-sm">
 									<i class="bi bi-x"></i> Eliminar
 								</a>
 							</div>
@@ -145,7 +151,7 @@
 		</section>
 	</main>
 
-	<footer class="mt-5 border-top" th:replace="Fragments :: footer">
+	<footer class="mt-5 border-top" th:replace="~{Fragments :: footer}"></footer>
 
 	</footer>
 
