--- a/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/web/Contacto.html
+++ b/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/web/Contacto.html
@@ -4,7 +4,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Contacto</title>
+	<meta name="description" content="Página de contacto de Tabla Rota Skate Shop">
+	<title>Contacto - Tabla Rota Skate Shop</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 	<link rel="stylesheet" type="text/css" th:href="@{/css/HojaDeEstilo.css}">
@@ -30,7 +31,7 @@
 							<p class="mt-4 mb-2 text-center fw-bold">También puedes consultar nuestro apartado de
 								preguntas frecuentes:</p>
 							<div class="text-center mt-4">
-								<a href="/faq" class="btn btn-outline-dark btn-lg">
+								<a th:href="@{/faq}" class="btn btn-outline-dark btn-lg">
 									<i class="bi bi-question-circle ms-2 mx-2"></i>FAQ - Preguntas Frecuentes
 								</a>
 							</div>
