--- a/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/web/EnvioDevolucion.html
+++ b/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/web/EnvioDevolucion.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Envio & Devolución</title>
+    <meta name="description" content="Página de envío y devolución de Tabla Rota Skate Shop">
+    <title>Envio & Devolución - Tabla Rota Skate Shop</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 	<link rel="stylesheet" type="text/css" th:href="@{/css/HojaDeEstilo.css}">
