--- a/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/web/PoliticaPrivacidad.html
+++ b/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/web/PoliticaPrivacidad.html
@@ -4,7 +4,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Cookies</title>
+	<meta name="description" content="Página de pólitica de privacidad de Tabla Rota Skate Shop">
+	<title>Política de Privacidad - Tabla Rota Skate Shop</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 	<link rel="stylesheet" type="text/css" th:href="@{/css/HojaDeEstilo.css}">
@@ -18,7 +19,7 @@
 
 	<main>
 		<div class="container mt-5 mb-5">
-			<h1 class="border-bottom m-2">COOKIES</h1>
+			<h1 class="border-bottom m-2">PRIVACIDAD</h1>
 
 		</div>
 	</main>
